@@ -14,6 +14,8 @@ trunk
 * bugfix when (I-A)^-1 speedup is disabled
 * bugfix in mxAlgebra() detection of missing operator or function
 * error checking for 0-length arguments to mxPath()
+* the configuration mxRun(model, checkpoint = TRUE) writes a line
+  in the checkpoint file at the conclusion of model optimization.
 
 Release 1.2.0-1926 (February 04, 2012)
 ======================================
